cluster/rook-ceph/s3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-s3
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    uroperator.brennerm.github.io/monitor.type: HTTPS
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - s3.roomofrequirement.xyz
    secretName: ceph-s3-cert
  rules:
  - host: s3.roomofrequirement.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-rgw-object-store
            port:
              name: http
